Fixed Alignment problems and improved responsiveness
Fixed the problem where the website was shifted to the left and had white space to the right.
Fixed mobile view product listings to be centered and aligned.

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -10,7 +10,8 @@ html,
 body {
     max-width: 100%;
     background-color: rgb(248, 248, 248);
-    /* overflow-x: hidden; */
+    margin: auto;
+    overflow-x: hidden;
 }
 
 body {
@@ -54,7 +55,6 @@ body {
     padding: 0;
     margin-bottom: auto;
     border-bottom: 3px solid #c3996b;
-    margin-right: 1rem;
 }
 
 #header img {
@@ -89,7 +89,6 @@ footer {
 }
 
 body {
-    margin-right: 10%;
     position: relative;
 }
 
@@ -243,6 +242,10 @@ code {
     background-color: #eee;
     padding: 0.5rem;
     display: block;
+}
+
+main {
+    margin: auto;
 }
 
 main img {
@@ -909,8 +912,8 @@ POTENTIAL IMAGERIES---------------------
     display: flex;
     flex-direction: row;
     max-width: 70%;
-    margin-left: 6rem;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .product-listing-container-sm {
